changed GUEST to AWAY

--- a/BBscore/index.html
+++ b/BBscore/index.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div>
-                <h1 class="head">GUEST</h1>
+                <h1 class="head">AWAY</h1>
                  <div class="score">
                     <h1 class="score-count" id="guest-score-el">0</h1>
                 </div>
